# appointment-scheduler

./: .env.example  .gitignore  README.md  app.py  architecture-low-level.md  architecture.md  context.md  deployment.md  pyproject.toml  requirements.txt  setup.cfg
Docs/: Problem statement  stitch-desktop-ui-prompt.md
data/: mock_calendar.json
frontend/: .env.production  README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppShell.tsx  BookingConfirmed.tsx  LiveCaption.tsx  SlotOffer.tsx  StepIndicator.tsx  VoiceOrb.tsx
frontend/src/hooks/: useSpeech.ts
scripts/: export_vercel_google_env.py
src/advisor_scheduler/: __init__.py  __main__.py  main.py  secure_link.py
src/advisor_scheduler/agent/: __init__.py  llm_agent.py  tool_bindings.py
src/advisor_scheduler/api/: app.py  chat.py  schemas.py
src/advisor_scheduler/compliance/: __init__.py  advice.py  disclaimer.py  pii.py
src/advisor_scheduler/domain/: __init__.py  booking.py  codes.py  (+6 more)
stitch_voice_concierge_scheduler/acoustic_serenity/: DESIGN.md
stitch_voice_concierge_scheduler/booking_confirmed_nl_a742/: code.html
stitch_voice_concierge_scheduler/idle_ready_to_book/: code.html
stitch_voice_concierge_scheduler/listening_disclaimer_state/: code.html
stitch_voice_concierge_scheduler/slot_offer_appointment_options/: code.html
tests/: conftest.py
tests/integration/: test_live_google_mcp.py
tests/unit/: test_phase1_domain.py  test_phase2_chat.py  test_phase3_mcp.py  test_phase4_intents.py
(+19 files in other folders)
