[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advisor-scheduler"
version = "0.1.0"
description = "Compliant advisor appointment pre-booking agent (chat-first, voice later)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "fastmcp>=2.0",
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
  "google-auth-oauthlib>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
advisor-scheduler = "advisor_scheduler.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.vercel]
entrypoint = "app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
