[metadata]
name = advisor-scheduler
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pydantic>=2.0
    pydantic-settings>=2.0
    python-dotenv>=1.0
    fastapi>=0.110
    uvicorn>=0.27
    fastmcp>=2.0
    google-api-python-client>=2.0
    google-auth>=2.0
    google-auth-oauthlib>=1.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.0
    httpx>=0.27
